--- a/symfony_fw/templates/render/page_action/page_action_test.html.twig
+++ b/symfony_fw/templates/render/page_action/page_action_test.html.twig
@@ -1,4 +1,5 @@
 <div>
     <p>Page action test</p>
 </div>
-<script nonce="{{php_session.xssProtectionValue}}" src="{{asset("js/page_action/PageActionTest.js")}}"></script>
+
+<script nonce="{{php_session.xssProtectionValue}}" src="{{asset("js/system/PageActionTest" ~ javascriptMinify)}}"></script>
