--- a/symfony_fw/public/scss/system/basic.scss
+++ b/symfony_fw/public/scss/system/basic.scss
@@ -754,6 +754,12 @@ pre {
     }
 }
 
+#menu_user {
+    .session_over {
+        display: none;
+    }
+}
+
 #language_text_container {
     .mdc-list-item {
         span {
