--- a/symfony_fw/public/scss/system/helper.scss
+++ b/symfony_fw/public/scss/system/helper.scss
@@ -1,5 +1,6 @@
 $widthMobile: "839px";
 $widthDesktop: "840px";
+$widthMiddle: "599px";
 
 $mdc-theme-primary: #1976d2;
 $mdc-theme-on-primary: #ffffff;
