--- a/symfony_fw/public/scss/system/wysiwyg.scss
+++ b/symfony_fw/public/scss/system/wysiwyg.scss
@@ -1,4 +1,6 @@
-@media(max-width: "839px") {
+@import "helper.scss";
+
+@media(max-width: $widthMobile) {
     .wysiwyg {
         .toolbar {
             .mdc-fab {
