--- a/symfony_fw/templates/layout/layout_site.html.twig
+++ b/symfony_fw/templates/layout/layout_site.html.twig
@@ -42,6 +42,7 @@
         <link href="{{asset("css/system/" ~ settingRow['template'] ~ ".css")}}" rel="stylesheet"/>
         <link href="{{asset("css/system/animation.css")}}" rel="stylesheet"/>
         <link href="{{asset("css/system/loader.css")}}" rel="stylesheet"/>
+        <link href="{{asset("css/system/process_lock.css")}}" rel="stylesheet"/>
         <link href="{{asset("css/system/captcha.css")}}" rel="stylesheet"/>
         <link href="{{asset("css/system/table_and_pagination.css")}}" rel="stylesheet"/>
         <link href="{{asset("css/system/upload_chunk.css")}}" rel="stylesheet"/>
@@ -97,6 +98,7 @@
             window.url = {
                 'root': "{{response.url.root}}",
                 'rootRender': "{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+                'processLockListener': "{{response.url.root}}/listener/processLockListener.php",
                 'languageText': "{{path("language_text", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
                 'languagePage': "{{path("language_page", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
                 'searchModule': "{{path("search_module", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
@@ -155,6 +157,7 @@
         <script nonce="{{php_session.xssProtectionValue}}" src="{{asset("js/system/Loader" ~ javascriptMinify)}}"></script>
         <script nonce="{{php_session.xssProtectionValue}}" src="{{asset("js/system/FlashBag" ~ javascriptMinify)}}"></script>
         <script nonce="{{php_session.xssProtectionValue}}" src="{{asset("js/system/PopupEasy" ~ javascriptMinify)}}"></script>
+        <script nonce="{{php_session.xssProtectionValue}}" src="{{asset("js/system/ProcessLock" ~ javascriptMinify)}}"></script>
         <script nonce="{{php_session.xssProtectionValue}}" src="{{asset("js/system/Search" ~ javascriptMinify)}}"></script>
         <script nonce="{{php_session.xssProtectionValue}}" src="{{asset("js/system/TableAndPagination" ~ javascriptMinify)}}"></script>
         <script nonce="{{php_session.xssProtectionValue}}" src="{{asset("js/system/Captcha" ~ javascriptMinify)}}"></script>
