--- a/symfony_fw/templates/include/process_lock.html.twig
+++ b/symfony_fw/templates/include/process_lock.html.twig
@@ -1,4 +1,4 @@
-<div class="processLock">
+<div class="process_lock">
     <i class="material-icons close" disabled="disabled">close</i>
     <div class="content">
         <p>{% trans %}process_lock_1{% endtrans %}</p>
