--- a/symfony_fw/templates/render/control_panel/microservice_api.html.twig
+++ b/symfony_fw/templates/render/control_panel/microservice_api.html.twig
@@ -1,28 +1,15 @@
 {% if response.values is defined %}
     {% for key, value in response.values.microserviceApiRows %}
         <div class="mdc-card microservice_api_card">
-            <div class="mdc_card_header">
-                <div class="mdc-card__media mdc-card__media--square">
-                    {% if value['image'] == "" %}
-                        <img src="{{asset("images/templates/" ~ settingRow['template'] ~ "/api.png")}}" alt="api.png"/>
-                    {% else %}
-                        <img src="{{asset("files/microservice/api/" ~ value['image'])}}" alt="{{value['image']}}"/>
-                    {% endif%}
-                </div>
-                <div class="mdc_card_description">
-                    <h1 class="mdc-typography--headline6"><span>{{value['name']}}</span></h1>
-                    <p>{{value['description']}}</p>
-                </div>
-            </div>
-            <hr class="mdc-list-divider">
-            <div class="mdc-card__actions">
-                <div class="mdc-card__action-buttons">
-                    <a class="mdc-button mdc-button--dense mdc-card__action mdc-card__action--button" href="{{path("control_panel", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': "cp_microservice_api_profile_" ~ (key + 1)})}}" type="button">
-                        {% trans %}microserviceApi_1{% endtrans %}
-                    </a>
-                </div>
-                <div class="mdc-card__action-icons">
-                    <p>
+            <section class="mdc-card__header">
+                {% if value['image'] == "" %}
+                    <img src="{{asset("images/templates/" ~ settingRow['template'] ~ "/api.png")}}" alt="api.png"/>
+                {% else %}
+                    <img src="{{asset("files/microservice/api/" ~ value['image'])}}" alt="{{value['image']}}"/>
+                {% endif%}
+                <div class="text_container">
+                    <p class="mdc-card__title">{{value['name']}}</p>
+                    <p class="mdc-card__subtitle">
                         {% if value['active'] == true %}
                             {% trans %}microserviceApi_2{% endtrans %}
                         {% else %}
@@ -30,7 +17,15 @@
                         {% endif%}
                     </p>
                 </div>
-            </div>
+            </section>
+            <section class="mdc-card__media">
+                <p>{{value['description']}}</p>
+            </section>
+            <section class="mdc-card__actions">
+                <a class="mdc-button mdc-button--dense mdc-card__action mdc-card__action--button" href="{{path("control_panel", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': "cp_microservice_api_profile_" ~ (key + 1)})}}" type="button">
+                    {% trans %}microserviceApi_1{% endtrans %}
+                </a>
+            </section>
         </div>
     {% endfor %}
 {% endif %}
