--- a/symfony_fw/public/scss/system/loader.scss
+++ b/symfony_fw/public/scss/system/loader.scss
@@ -1,7 +1,9 @@
-$green: #008744;
-$blue: #0057e7;
-$red: #d62d20;
-$yellow: #ffa700;
+@import "helper.scss";
+
+$color1: #008744;
+$color2: #0057e7;
+$color3: #d62d20;
+$color4: #ffa700;
 
 $width: 50px;
 
@@ -13,7 +15,7 @@ $width: 50px;
     right:0;
     top:0;
     bottom:0;
-    background-color: #000000;
+    background-color: $mdc-theme-on-surface;
     opacity: 0.7;
     filter: alpha(opacity=70);
     z-index: 1200;
@@ -26,8 +28,8 @@ $width: 50px;
     margin-top: -25px;
     margin-left: -25px;
     z-index: 1201;
-    background-color: #ffffff;
-    border: 1px solid #cecece;
+    background-color: $mdc-theme-background;
+    border: 1px solid $mdc-theme-surface;
     border-radius: 50%;
     width: $width;
   
@@ -81,15 +83,15 @@ $width: 50px;
 }
 @keyframes color {
     100%, 0% {
-        stroke: $red;
+        stroke: $color1;
     }
     40% {
-        stroke: $blue;
+        stroke: $color2;
     }
     66% {
-        stroke: $green;
+        stroke: $color3;
     }
     80%, 90% {
-        stroke: $yellow;
+        stroke: $color4;
     }
 }
