--- a/symfony_fw/public/scss/system/wysiwyg.scss
+++ b/symfony_fw/public/scss/system/wysiwyg.scss
@@ -18,7 +18,7 @@
         i {
             display: inline-block;
             cursor: pointer;
-            border: 1px solid #000000;
+            border: 1px solid $mdc-theme-on-surface;
             border-radius: 5px;
             margin: 2px;
         }
@@ -35,7 +35,7 @@
     }
     
     .editor {
-        border: 1px solid;
+        border: 1px solid $mdc-theme-on-surface;
         width: 100%;
         height: 700px;
         margin-top: 10px;
@@ -45,7 +45,8 @@
         display: none;
         border: 1px solid;
         height: 700px;
-        background-color: #faf9f9;
+        background-color: $mdc-theme-secondary;
+        color: $mdc-theme-on-secondary;
         padding: 5px;
         overflow-y: scroll;
         margin-top: 10px;
