--- a/symfony_fw/templates/render/index.html.twig
+++ b/symfony_fw/templates/render/index.html.twig
@@ -14,9 +14,6 @@
                     <img class="logo_main_big" src="{{asset("images/templates/" ~ settingRow['template'] ~ "/logo.svg")}}" alt="logo.svg"/>
                     <span class="mdc-top-app-bar__title">{{websiteName}}</span>
                 </div>
-                <span class="mdc-top-app-bar__title display_mobile">
-                    <img class="logo_main_small" src="{{asset("images/templates/" ~ settingRow['template'] ~ "/logo.svg")}}" alt="logo.svg"/>
-                </span>
             </section>
             <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
                 {{-render(controller("App\\Controller\\SearchController::moduleAction", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
@@ -74,11 +71,8 @@
             </div>
         {% else %}
             <div class="sortable_column">
-                <div class="maintenance_container">
-                    <img src="{{asset("images/templates/" ~ settingRow['template'] ~ "/maintenance.svg")}}" alt="maintenance.svg"/>
-                    <p>{% trans %}index_1{% endtrans %}</p>
-                    <p>{% trans %}index_2{% endtrans %}</p>
-                </div>
+                {{-include("@templateRoot/include/maintenance.html.twig")-}}
+                {{-include("@templateRoot/include/maintenance_custom.html.twig")-}}
             </div>
         {% endif %}
     {% endif %}
