--- a/symfony_fw/templates/render/module/empty.html.twig
+++ b/symfony_fw/templates/render/module/empty.html.twig
@@ -4,7 +4,7 @@
 {% block panelClass %}module_empty{% endblock %}
 {% block moduleHeaderIcon %}<i class="material-icons">crop_square</i>{% endblock %}
 {% block moduleHeaderTitle %}{% trans %}module_3{% endtrans %}{% endblock %}
-{% block moduleHeaderSubTitle %}header sub title{% endblock %}
+{% block moduleHeaderSubTitle %}{% endblock %}
 {% block moduleContainer %}container{% endblock %}
 {% block moduleSupportText %}{% endblock %}
 {% block moduleFooter %}{% endblock %}
