--- a/symfony_fw/public/scss/system/helper.scss
+++ b/symfony_fw/public/scss/system/helper.scss
@@ -7,10 +7,17 @@ $mdc-theme-on-primary: #ffffff;
 $mdc-theme-secondary: #d50000;
 $mdc-theme-on-secondary: #ffffff;
 $mdc-theme-background: #ffffff;
-$mdc-theme-surface: #0000b3;
-$mdc-theme-on-surface: #9e9e9e;
+$mdc-theme-surface: #63a4ff;
+$mdc-theme-on-surface: #000000;
 
-$backBackgroundColor: 000000;
+$moduleBorderColor: #dee2e6;
+$moduleBackgroundColor: #ececec;
+
+$codeBackgroundColor: #9e9e9e;
+$codeTextColor: #000000;
+
+$consoleBackgroundColor: #000000;
+$consoleTextColor: #ffffff;
 
 @mixin opacity($value) {
     $msOpacity: $value * 100;
@@ -101,5 +108,3 @@ $backBackgroundColor: 000000;
 
 .material-icons.md-light {color: rgba(255, 255, 255, 1) !important;}
 .material-icons.md-light.md-inactive {color: rgba(255, 255, 255, 0.3) !important;}
-
-@import "helper_custom.scss";
