--- a/symfony_fw/public/scss/system/loader.scss
+++ b/symfony_fw/public/scss/system/loader.scss
@@ -1,9 +1,12 @@
-@import "helper.scss";
-
 $color1: #008744;
 $color2: #0057e7;
 $color3: #d62d20;
 $color4: #ffa700;
+
+$backBackgroundColor: #000000;
+
+$backgroundColor: #ffffff;
+$borderColor: #000000;
 
 $width: 50px;
 
@@ -15,7 +18,7 @@ $width: 50px;
     right:0;
     top:0;
     bottom:0;
-    background-color: $mdc-theme-on-surface;
+    background-color: $backBackgroundColor;
     opacity: 0.7;
     filter: alpha(opacity=70);
     z-index: 1200;
@@ -28,8 +31,8 @@ $width: 50px;
     margin-top: -25px;
     margin-left: -25px;
     z-index: 1201;
-    background-color: $mdc-theme-background;
-    border: 1px solid $mdc-theme-surface;
+    background-color: $backgroundColor;
+    border: 1px solid $borderColor;
     border-radius: 50%;
     width: $width;
   
