--- a/symfony_fw/public/scss/system/table_and_pagination.scss
+++ b/symfony_fw/public/scss/system/table_and_pagination.scss
@@ -1,3 +1,11 @@
+$borderColor: #000000;
+
+$alternateBackgroundColor1: #d8d8d8;
+$alternateTextColor1: #000000;
+
+$alternateBackgroundColor2: #63a4ff;
+$alternateTextColor2: #000000;
+
 .tableAndPagination {
     .button_container {
         display: none;
@@ -15,5 +23,47 @@
     .previous, .text, .next {
         display: inline-block;
         vertical-align: middle;
+    }
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    
+    thead {
+        tr {
+            th {
+                position: relative;
+                padding: 0 24px 0 24px;
+                text-align: center;
+                border-bottom: 2px solid $borderColor;
+                cursor: pointer;
+                font-weight: normal;
+
+                i {
+                    top: 0;
+                    right: 0;
+                    position: absolute;
+                }
+            }
+        }
+    }
+    
+    tbody {
+        tr {
+            td {
+                text-align: center;
+                border-bottom: 1px solid $borderColor;
+                padding: 5px;
+            }
+        }
+        tr:nth-child(even) {
+            background-color: $alternateBackgroundColor1;
+            color: $alternateTextColor1;
+        }
+        tr:nth-child(odd) {
+            background-color: $alternateBackgroundColor2;
+            color: $alternateTextColor2;
+        }
     }
 }
