--- a/symfony_fw/public/scss/system/widget.scss
+++ b/symfony_fw/public/scss/system/widget.scss
@@ -32,10 +32,10 @@
         input {
             display: none;
             border: none;
-            border-bottom: 1px solid $mdc-theme-surface;
+            border-bottom: 1px solid $mdc-theme-on-primary;
             font-size: 16px;
             background: none;
-            color: $mdc-theme-on-surface;
+            color: $mdc-theme-on-primary;
             position: relative;
             width: 100%;
             top: 14px;
